--- a/깃허브 페이지 과제/index.css
+++ b/깃허브 페이지 과제/index.css
@@ -1,5 +1,5 @@
 html {
-    height: 0;
+    height: 100%;
 }
 button {
     background: none;
@@ -7,6 +7,16 @@ button {
 }
 button:hover {
     cursor: pointer;
+}
+
+body {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+#topside {
+    flex: 1;
 }
 
 #nav {
@@ -152,4 +162,28 @@ button:hover {
 #main-right-privacy-notice {
     color: gray;
     margin-top: 30px;   
+}
+
+#footer {
+    position: relative;
+    width: 100%;
+    height: 120px;
+    bottom: 0;
+}
+
+#footer-image-container {
+    width: 440px;
+    height: 200px;
+    overflow: hidden;
+    position: absolute;
+    display: inline-block;
+    right: 80px;
+    bottom: 0;
+}
+
+#footer-image {
+    width: inherit;
+    position: absolute;
+    left: 0;
+    bottom: -25px;
 }
