--- a/피로그래밍 홈페이지/portfolio.css
+++ b/피로그래밍 홈페이지/portfolio.css
@@ -33,6 +33,7 @@ body {
     padding: 0 40px;
     width: 1200px;
     background-color: var(--color_bg);
+    mask-image: linear-gradient(to bottom, var(--color_bg) 60%, transparent 100%);
     z-index: 1;
 }
 
@@ -66,6 +67,28 @@ body {
 .header-navs a:hover {
     position: relative;
     top: -2px;
+}
+.header-hamburger {
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    right: 40px;
+}
+.header-hamburger > .hamburger-elem {
+    width: 100%;
+    height: 3px;
+    background-color: var(--color_white);
+    transition: 0.3s;
+}
+.header-hamburger > .hamburger-elem:nth-child(1) {
+    width: 50%;
+}
+.header-hamburger > .hamburger-elem:nth-child(3) {
+    width: 70%;
 }
 
 #main {
@@ -119,6 +142,7 @@ body {
     width: 150px;
     height: 110px;
     overflow: hidden;
+    border-radius: 5px;
 }
 .portfolio-image > img {
     width: auto;
@@ -174,13 +198,13 @@ body {
     right: 16px;
     top: 16px;
 }
-.hamburger-elem {
+.portfolio-hamburger > .hamburger-elem {
     width: 100%;
     height: 2px;
     background-color: var(--color_hamburger);
     transition: 0.3s;
 }
-.hamburger-elem:nth-child(3) {
+.portfolio-hamburger > .hamburger-elem:nth-child(3) {
     margin-left: auto;
 }
 .portfolio-container:hover {
@@ -190,13 +214,13 @@ body {
 .portfolio-container:hover .portfolio-image > img {
     transform: scale(1.1);
 }
-.portfolio-container:hover .hamburger-elem:nth-child(1) {
+.portfolio-container:hover .portfolio-hamburger > .hamburger-elem:nth-child(1) {
     width: 10px;
 }
-.portfolio-container:hover .hamburger-elem:nth-child(2) {
+.portfolio-container:hover .portfolio-hamburger > .hamburger-elem:nth-child(2) {
     transform: scaleY(1.1)
 }
-.portfolio-container:hover .hamburger-elem:nth-child(3) {
+.portfolio-container:hover .portfolio-hamburger > .hamburger-elem:nth-child(3) {
     width: 10px;
 }
 
@@ -211,7 +235,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 1200px;
+    width: min(1200px, 100%);
     height: 190px;
     padding: 40px;
 }
@@ -221,7 +245,6 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    margin-right: 100px;
 }
 #footer-main-info > a {
     font-size: 0.9rem;
@@ -291,18 +314,120 @@ body {
     top: -2px;
 }
 
+@media (max-width: 1200px) {
+    #header, #main {
+        width: 100%;
+    }
+}
+
+@media (max-width: 1080px) {
+    #footer-main {
+        height: 244px;
+        flex-direction: column;
+        gap: 50px;
+    }
+}
+
 @media (max-width: 800px) {
-    
+    #header {
+        height: 70px;
+    }
+    .header-logo {
+        width: 30px;
+        height: 30px;
+    }
+    .header-navs {
+        display: none;
+    }
+    .header-hamburger {
+        display: flex;
+    }
 }
 
 @media (max-width: 768px) {
-    
+    #header, #main {
+        width: 100%;
+        padding-right: 16px;
+        padding-left: 16px;
+    }
+    .header-logo {
+        left: 16px;
+    }
+    .header-hamburger {
+        right: 16px;
+    }
+}
+
+@media (max-width: 750px) {
+    #footer-main {
+        height: 190px;
+        flex-direction: column;
+    }
+    #footer-main-navs {
+        display: none;
+    }
 }
 
 @media (max-width: 650px) {
-    
+    .portfolio-container {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-top: 40px;
+    }
+    .portfolio-image {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 250px;
+        height: 160px;
+        padding: 10px 20px;
+    }
+    .portfolio-image > img {
+        width: 210px;
+        height: auto;
+    }
+    .portfolio-text-container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 5px;
+    }
+    .portfolio-name {
+        margin-bottom: 11px;
+    }
+    .portfolio-description {
+        line-height: 20px;
+        text-align: center;
+    }
 }
 
 @media (max-width: 500px) {
-    
+    .portfolio-members {
+        display: grid;
+        grid-template-columns: 60px 60px 60px;
+        gap: 10px;
+    }
+    .portfolio-members > div {
+        font-size: 0.9rem;
+        display: inline-block;
+        width: 100%;
+        height: 26px;
+        line-height: 26px;
+        text-align: center;
+        border-radius: 5px;
+        margin-right: 0;
+    }
+}
+
+@media (max-width: 420px) {
+    .portfolio-image {
+        width: 80%;
+        padding: 10px 20px;
+    }
+    .portfolio-image > img {
+        width: 210px;
+        height: auto;
+    }
 }
