피로그래밍 홈페이지

--- a/피로그래밍 홈페이지/variables.css
+++ b/피로그래밍 홈페이지/variables.css
@@ -4,6 +4,8 @@
     --color_white: #fff;
     --color_member1: #5486b2;
     --color_member2: #898989;
+    --color_member3: #35a67b;
+    --color_member4: #c54422;
     --color_hamburger: rgba(236, 236, 236, 0.466);
     --color-portfolio-bg: rgb(51 51 51);
     --color-gray: #c6c6c6;
