[스톱워치] 기본 기능 + (챌린지)전체 선택 버튼 구현

--- a/Javascript 스톱워치 과제/style.css
+++ b/Javascript 스톱워치 과제/style.css
@@ -90,6 +90,7 @@ h2 {
     font-family: var(--main-font);
     font-size: 20px;
     box-shadow: 7px 7px 7px rgb(0, 0, 0, .1);
+    cursor: pointer;
 }
 
 .record {
@@ -128,6 +129,7 @@ h2 {
 .records {
     display: flex;
     flex-direction: column;
+    overflow-y: scroll;
 }
 .record-item {
     display: flex;
