--- a/Javascript 스톱워치 과제/style.css
+++ b/Javascript 스톱워치 과제/style.css
@@ -51,6 +51,28 @@ h2 {
     font-family: var(--main-font);
 }
 
+.options {
+    width: calc(40% - 80px);
+    height: 4%;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+}
+.options > button {
+    flex: 1;
+    height: 50%;
+    transform: translateY(100%);
+    border-radius: 10px 10px 0 0;
+    border: none;
+    outline: none;
+    background-color: var(--main-color);
+    cursor: pointer;
+}
+.options > .option-selected {
+    height: 100%;
+    transform: translateY(0);
+}
+
 .stopwatch {
     display: flex;
     flex-direction: column;
@@ -156,4 +178,55 @@ h2 {
     background-image: url(./check.svg);
     background-repeat: no-repeat;
     background-position: center center;
+}
+
+/* timer 관련 */
+.timer-setting {
+    display: flex;
+    flex-direction: column;
+    background-color: var(--main-color);
+    width: 45%;
+    height: 40%;
+    margin-top: 50px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    border-radius: 25px;
+    gap: 20px;
+}
+.timer-setting-inputs {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 100%;
+    width: 100%;
+}
+.timer-setting-inputs > input::-webkit-outer-spin-button,
+.timer-setting-inputs > input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+.timer-setting-inputs > input {
+    height: 80%;
+    width: 60%;
+    text-align: center;
+    font-size: 80px;
+    -moz-appearance: textfield;
+    background-color: transparent;
+    border: 1px solid black;
+}
+.timer-setting-inputs > button {
+    height: 80%;
+    width: 30%;
+    border-radius: 5px;
+    border: none;
+    font-family: var(--main-font);
+    font-size: 20px;
+    box-shadow: 7px 7px 7px rgb(0, 0, 0, .1);
+    cursor: pointer;
+}
+
+
+.no-display {
+    display: none;
 }
