--- a/myMovieReviews/templates/review/detail.html
+++ b/myMovieReviews/templates/review/detail.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="summary-movie_runningTime">
                     <span class="summary-about">러닝타임</span>
-                    <span class="summary-data">{{review.runningTime}}</span>
+                    <span class="summary-data">{{runningTime}}</span>
                 </div>
             </div>
         </div><div class="main-movie_review">
