--- a/myMovieReviews/templates/review/create.html
+++ b/myMovieReviews/templates/review/create.html
@@ -36,9 +36,12 @@
             <label for="category">장르:</label>
             <select id="category" name="category" required>
                 <option value="" disabled selected>--------</option>
-                <option value="comedy">Comedy</option>
+                <option value="코미디">코미디</option>
                 <option value="SF">SF</option>
-                <option value="action">Action</option>
+                <option value="액션">액션</option>
+                <option value="공포">공포</option>
+                <option value="다큐멘터리">다큐멘터리</option>
+                <option value="로맨스">로맨스</option>
             </select>
             <br>
             </div>
@@ -50,8 +53,8 @@
             </div>
     
             <div class='form-input-element'>
-            <label for="runningTime">러닝타임:</label>
-            <input type="text" id="runningTime" name="runningTime" required>
+            <label for="runningTime">러닝타임 (분):</label>
+            <input type="number" id="runningTime" name="runningTime" required>
             <br>
             </div>
     
