--- a/piro22_Ajax_Pirostagram/static/css/base.css
+++ b/piro22_Ajax_Pirostagram/static/css/base.css
@@ -7,9 +7,10 @@ body {
     display: flex;
     flex-direction: column;
     align-content: stretch;
-    overflow-y: scroll;
+    overflow-y: hidden;
     height: 100dvh;
     width: 30dvw;
+    min-width: 360px;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -19,9 +20,24 @@ body {
 
 header {
     height: 5%;
+    position: relative;
 }
 header h2 {
     margin: 0;
+    text-align: left;
+    line-height: 36px;
+}
+header p {
+    margin: 0;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translate(0, -50%);
+    text-align: center;
+}
+header p a {
+    text-decoration: none;
+    color: inherit;
 }
 main {
     height: 90%;
@@ -29,9 +45,19 @@ main {
 }
 footer {
     height: 5%;
+    width: 100%;
     position : fixed;
     bottom : 0;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     align-items: center;
+}
+footer a {
+    height: 100%;
+    text-decoration: none;
+    color: inherit;
+}
+footer a svg {
+    height: 100%;
+    width: auto;
 }
